delete button article and fix alignemnt of inputs

--- a/basic-frontend/src/app/shared/components/articleform/articleform.component.css
+++ b/basic-frontend/src/app/shared/components/articleform/articleform.component.css
@@ -40,3 +40,10 @@ h2, .article-form {
   margin-top: 5px;
 }
 
+.save-button{
+  margin-right: 1rem;
+}
+
+.keywords-label{
+  width: 120px;
+}
